--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
 			<artifactId>jdk.tools</artifactId>
 			<scope>system</scope>
 			<version>1.7</version>
-			<systemPath>C:/Java/jdk1.7.0_80/lib/tools.jar</systemPath>
+			<systemPath>/usr/lib/jvm/java-8-openjdk-amd64/lib/tools.jar</systemPath>
 		</dependency>
 
 		<dependency>
